# ona-download

./: .gitignore  OnaHelper.py  OnaHelperMulti.py  README.md  allFormList.txt  events.txt  example.env  formList.txt  ftp-upload.py  history.txt  jsonFormList.txt  logger.yaml  main.py  media.py  multi.py  my_logger.py  ng.txt  ona.py  ona_form.db  phploy.ini  pyproject.toml  requirements.txt  rw.txt  sandman.txt  setup.py  test.txt  turry_forms.txt
.github/workflows/: pull-request-automation.yml
db/: models.py
downloads/: .gitignore
ona/: OnaHelper.py  ProcessData.py
processing/: ProcessData.py
